--- a/papers.html
+++ b/papers.html
@@ -316,7 +316,7 @@
   style="padding: 10pt; position: fixed; bottom: 0; display: none;"
 >
   We use cookies to store which papers have been visited.
-  <div class="gdpr-btn btn btn-sm btn-info" style="margin-left: 15pt;">
+  <div class="gdpr-btn btn btn-sm btn-info" style="margin-left: 15pt; background-color: green; color: white">
     I agree
   </div>
 </div>
