--- a/calendar.html
+++ b/calendar.html
@@ -154,7 +154,7 @@
                 </li>
                 
                 <li class="nav-item ">
-                    <a class="nav-link" href="help.html">Help</a>
+                    <a class="nav-link" href="lbds.html">LBDs</a>
                 </li>
                 
             </ul>
