--- a/help.html
+++ b/help.html
@@ -127,8 +127,8 @@
                     <a class="nav-link" href="tutorials.html">Tutorials</a>
                 </li>
                 
-                <li class="nav-item active">
-                    <a class="nav-link" href="help.html">Help</a>
+                <li class="nav-item ">
+                    <a class="nav-link" href="lbds.html">LBDs</a>
                 </li>
                 
             </ul>
