--- a/papers.html
+++ b/papers.html
@@ -137,7 +137,7 @@
                 </li>
                 
                 <li class="nav-item ">
-                    <a class="nav-link" href="help.html">Help</a>
+                    <a class="nav-link" href="lbds.html">LBDs</a>
                 </li>
                 
             </ul>
