--- a/poster_45.html
+++ b/poster_45.html
@@ -140,7 +140,7 @@
                 </li>
                 
                 <li class="nav-item ">
-                    <a class="nav-link" href="help.html">Help</a>
+                    <a class="nav-link" href="lbds.html">LBDs</a>
                 </li>
                 
             </ul>
