--- a/tutorial_1.html
+++ b/tutorial_1.html
@@ -127,7 +127,7 @@
                 </li>
                 
                 <li class="nav-item ">
-                    <a class="nav-link" href="help.html">Help</a>
+                    <a class="nav-link" href="lbds.html">LBDs</a>
                 </li>
                 
             </ul>
