deploy: dc18d621dfa3564aadb0e24ed983470ce229305b

--- a/tutorial_4.html
+++ b/tutorial_4.html
@@ -77,7 +77,7 @@
     <link rel="stylesheet" href="static/css/lazy_load.css"/>
     <link rel="stylesheet" href="static/css/typeahead.css"/>
 
-    <title>MiniConf 2024: Humans at the Center of MIR: Human-subjects Research Best Practices</title>
+    <title>MiniConf 2024: T4: Humans at the Center of MIR: Human-subjects Research Best Practices</title>
     
 </head>
 
@@ -153,7 +153,7 @@
 <div class="pp-card mt-3 mb-3" style="">
   <div class="card-header" style="background-color: rgba(0,0,0,0);">
     <h2 class="card-title main-title text-left" >
-      Humans at the Center of MIR: Human-subjects Research Best Practices
+      T4: Humans at the Center of MIR: Human-subjects Research Best Practices
     </h2>
     <h3 class="card-subtitle mb-2 text-muted text-left">
       Claire Arthur, Nat Condit-Schultz, David R. W. Sears, John Ashley Burgoyne, and Josuha Albrecht
