--- a/tutorial_5.html
+++ b/tutorial_5.html
@@ -77,7 +77,7 @@
     <link rel="stylesheet" href="static/css/lazy_load.css"/>
     <link rel="stylesheet" href="static/css/typeahead.css"/>
 
-    <title>MiniConf 2024: Deep Learning 101 for Audio-based MIR</title>
+    <title>MiniConf 2024: T5: Deep Learning 101 for Audio-based MIR</title>
     
 </head>
 
@@ -153,7 +153,7 @@
 <div class="pp-card mt-3 mb-3" style="">
   <div class="card-header" style="background-color: rgba(0,0,0,0);">
     <h2 class="card-title main-title text-left" >
-      Deep Learning 101 for Audio-based MIR
+      T5: Deep Learning 101 for Audio-based MIR
     </h2>
     <h3 class="card-subtitle mb-2 text-muted text-left">
       Geoffroy Peeters, Gabriel Meseguer Brocal, Alain Riou, and Stefan Lattner
