--- a/tutorials.html
+++ b/tutorials.html
@@ -299,7 +299,7 @@ Each part invites audience interaction, aiming to provide attendees with a deepe
       >
         <a class="text-muted" href="tutorial_3.html">
           <h3 class="card-title main-title">
-            From White Noise to Symphony: Diffusion Models for Music and Sound
+            T3: From White Noise to Symphony: Diffusion Models for Music and Sound
 
           </h3>
         </a>
@@ -327,7 +327,7 @@ We anticipate that this tutorial, emphasizing both the foundational principles a
       >
         <a class="text-muted" href="tutorial_4.html">
           <h3 class="card-title main-title">
-            Humans at the Center of MIR: Human-subjects Research Best Practices
+            T4: Humans at the Center of MIR: Human-subjects Research Best Practices
           </h3>
         </a>
         <div class="card-subtitle text-muted">
@@ -350,7 +350,7 @@ We anticipate that this tutorial, emphasizing both the foundational principles a
       >
         <a class="text-muted" href="tutorial_5.html">
           <h3 class="card-title main-title">
-            Deep Learning 101 for Audio-based MIR
+            T5: Deep Learning 101 for Audio-based MIR
           </h3>
         </a>
         <div class="card-subtitle text-muted">
@@ -377,7 +377,7 @@ The objective is to provide a 101 lecture (introductory lecture) on deep learnin
       >
         <a class="text-muted" href="tutorial_6.html">
           <h3 class="card-title main-title">
-            Lyrics and Singing Voice Processing in Music Information Retrieval: Analysis, Alignment, Transcription and Applications
+            T6: Lyrics and Singing Voice Processing in Music Information Retrieval: Analysis, Alignment, Transcription and Applications
           </h3>
         </a>
         <div class="card-subtitle text-muted">
