--- a/tutorial_3.html
+++ b/tutorial_3.html
@@ -77,7 +77,7 @@
     <link rel="stylesheet" href="static/css/lazy_load.css"/>
     <link rel="stylesheet" href="static/css/typeahead.css"/>
 
-    <title>MiniConf 2024: From White Noise to Symphony: Diffusion Models for Music and Sound
+    <title>MiniConf 2024: T3: From White Noise to Symphony: Diffusion Models for Music and Sound
 </title>
     
 </head>
@@ -154,7 +154,7 @@
 <div class="pp-card mt-3 mb-3" style="">
   <div class="card-header" style="background-color: rgba(0,0,0,0);">
     <h2 class="card-title main-title text-left" >
-      From White Noise to Symphony: Diffusion Models for Music and Sound
+      T3: From White Noise to Symphony: Diffusion Models for Music and Sound
 
     </h2>
     <h3 class="card-subtitle mb-2 text-muted text-left">
