--- a/tutorial_6.html
+++ b/tutorial_6.html
@@ -77,7 +77,7 @@
     <link rel="stylesheet" href="static/css/lazy_load.css"/>
     <link rel="stylesheet" href="static/css/typeahead.css"/>
 
-    <title>MiniConf 2024: Lyrics and Singing Voice Processing in Music Information Retrieval: Analysis, Alignment, Transcription and Applications</title>
+    <title>MiniConf 2024: T6: Lyrics and Singing Voice Processing in Music Information Retrieval: Analysis, Alignment, Transcription and Applications</title>
     
 </head>
 
@@ -153,7 +153,7 @@
 <div class="pp-card mt-3 mb-3" style="">
   <div class="card-header" style="background-color: rgba(0,0,0,0);">
     <h2 class="card-title main-title text-left" >
-      Lyrics and Singing Voice Processing in Music Information Retrieval: Analysis, Alignment, Transcription and Applications
+      T6: Lyrics and Singing Voice Processing in Music Information Retrieval: Analysis, Alignment, Transcription and Applications
     </h2>
     <h3 class="card-subtitle mb-2 text-muted text-left">
       Daniel Stoller, Emir Demirel, Kento Watanabe, and Brendan O’Connor
