deploy: 140b1c86fefd1e9c0a7958ba9e44bdf41d411b00

--- a/day_1.html
+++ b/day_1.html
@@ -231,11 +231,11 @@
     <div class="content">
         
 
-<div id="day">
+<div id="day">  
 
   
-  <h2 class="day-title" id=tut>Tutorials</h2>
-  <div> 
+    <h2 class="day-title" id=tut>Tutorials</h2>
+    <div> 
       
   </div>
   <div> 
@@ -254,10 +254,12 @@
 
   
 
+  
 
   
-    <h2 class="day-title" id=meet>Special Sessions</h2>
+    <h2 class="day-title" id=meet>Events</h2>
     <div class="cards row p-4">
+
   
   
   <div class="col-12 p-3" style="box-sizing: border-box;">
@@ -360,6 +362,7 @@
   
     <h2 class="day-title" id=social>Social Events</h2>
     <div class="cards row p-4">
+
   
   
   <div class="col-12 p-3" style="box-sizing: border-box;">
