--- a/day_4.html
+++ b/day_4.html
@@ -231,7 +231,7 @@
     <div class="content">
         
 
-<div id="day">
+<div id="day">  
 
   
 
@@ -259,7 +259,7 @@
             </div>
             <div class="m-3 text-muted">
               <span class="card-title h3">
-                Douglas Eck  /  
+                Douglas Eck 
               </span>
             </div>
             <div class="m-3 text-left card-subtitle">
@@ -490,6 +490,7 @@
   
     <h2 class="day-title" id=industry>Industry Session</h2>
     <div class="cards row p-4">
+
   
   
   <div class="col-12 p-3" style="box-sizing: border-box;">
@@ -552,10 +553,12 @@
 </div>
   
 
+  
 
   
-    <h2 class="day-title" id=meet>Special Sessions</h2>
+    <h2 class="day-title" id=meet>Events</h2>
     <div class="cards row p-4">
+
   
   
   <div class="col-12 p-3" style="box-sizing: border-box;">
