--- a/day_6.html
+++ b/day_6.html
@@ -231,7 +231,7 @@
     <div class="content">
         
 
-<div id="day">
+<div id="day">  
 
   
 
@@ -243,10 +243,12 @@
 
   
 
+  
 
   
-    <h2 class="day-title" id=meet>Special Sessions</h2>
+    <h2 class="day-title" id=meet>Events</h2>
     <div class="cards row p-4">
+
   
   
   <div class="col-12 p-3" style="box-sizing: border-box;">
@@ -283,6 +285,7 @@
   
     <h2 class="day-title" id=awards>Business Meeting and Awards</h2>
     <div class="cards row p-4">
+
   
   
   <div class="col-12 p-3" style="box-sizing: border-box;">
