--- a/day_5.html
+++ b/day_5.html
@@ -231,7 +231,7 @@
     <div class="content">
         
 
-<div id="day">
+<div id="day">  
 
   
 
@@ -321,10 +321,12 @@
 
   
 
+  
 
   
-    <h2 class="day-title" id=meet>Special Sessions</h2>
+    <h2 class="day-title" id=meet>Events</h2>
     <div class="cards row p-4">
+
   
   
   <div class="col-12 p-3" style="box-sizing: border-box;">
