--- a/index.html
+++ b/index.html
@@ -181,7 +181,7 @@
     <a
       id="calendar-html"
       class="nav-link text-muted"
-      href="calendar.html"
+      href="index.html"
       aria-controls="nav-home"
       aria-selected="true"
       >Calendar
@@ -262,6 +262,9 @@
         
 <div class="tab-content py-3 px-3 px-sm-0" id="nav-tabContent">
   <!-- Calender tab -->
+   <!-- Legend -->
+ 
+
   <div
     class="tab-pane active"
     id="tab-calendar"
@@ -281,6 +284,16 @@
     <div id="calendar_small" class="d-sm-none"></div>
 
 
+  </div>
+
+  <div class="row"> 
+    <div id="legend" class="col-12 col-md-6 col-lg-4">
+      <div id="onsite_event_legend" class="d-none">
+        <div class="d-flex align-items-center">
+          <div class="event_legend" style="background-color: #f8d7da;"></div>
+          <div class="ml-2">Onsite Event</div>
+        </div>
+    </div>
   </div>
 
   <!-- Day Tab -->
