--- a/industry.html
+++ b/industry.html
@@ -192,7 +192,7 @@
         
         <div class="col-12 mb-4">
             <div class="sponsor-card d-flex flex-column align-items-center">
-            <a href="/industry_1"> <h3>Music.ai</h3> 
+            <a href="/industry_1.html"> <h3>Music.ai</h3> 
             <img src="/static/images/sponsors/musicai.png" alt="Music.ai" class="img-fluid" style="max-width: 300px;">      
             </a>
           </div>
