deploy: 117bcc7ddc932867bf78671cc96e93efa8f00251

--- a/day_2.html
+++ b/day_2.html
@@ -309,7 +309,7 @@
 
 
             <div class="m-3">
-              <p>TBD</p>
+              
             </div>
             <div class="ml-3 mr-3 mt-4 mb-3 h5">
               Bio
@@ -581,7 +581,7 @@
   
   
   <div class="col-12 p-3" style="box-sizing: border-box;">
-    <div class="card" style="display: block; overflow: hidden; width: 100%;">
+    <div class="card" style="display: block; overflow: hidden; width: 100%;" id="18">
       <div
         class="card-header text-center"
         style="min-height: 200px; width: 100%;"
@@ -639,7 +639,7 @@
   
   
   <div class="col-12 p-3" style="box-sizing: border-box;">
-    <div class="card" style="display: block; overflow: hidden; width: 100%;">
+    <div class="card" style="display: block; overflow: hidden; width: 100%;" id="29">
       <div
         class="card-header text-center"
         style="min-height: 200px; width: 100%;"
@@ -712,7 +712,7 @@
   
   
   <div class="col-12 p-3" style="box-sizing: border-box;">
-    <div class="card" style="display: block; overflow: hidden; width: 100%;">
+    <div class="card" style="display: block; overflow: hidden; width: 100%;" id="14">
       <div
         class="card-header text-center"
         style="min-height: 200px; width: 100%;"
@@ -770,7 +770,7 @@
   
   
   <div class="col-12 p-3" style="box-sizing: border-box;">
-    <div class="card" style="display: block; overflow: hidden; width: 100%;">
+    <div class="card" style="display: block; overflow: hidden; width: 100%;" id="17">
       <div
         class="card-header text-center"
         style="min-height: 200px; width: 100%;"
@@ -828,7 +828,7 @@
   
   
   <div class="col-12 p-3" style="box-sizing: border-box;">
-    <div class="card" style="display: block; overflow: hidden; width: 100%;">
+    <div class="card" style="display: block; overflow: hidden; width: 100%;" id="22">
       <div
         class="card-header text-center"
         style="min-height: 200px; width: 100%;"
@@ -857,7 +857,7 @@
   
   
   <div class="col-12 p-3" style="box-sizing: border-box;">
-    <div class="card" style="display: block; overflow: hidden; width: 100%;">
+    <div class="card" style="display: block; overflow: hidden; width: 100%;" id="31">
       <div
         class="card-header text-center"
         style="min-height: 200px; width: 100%;"
@@ -931,7 +931,7 @@
   
   
   <div class="col-12 p-3" style="box-sizing: border-box;">
-    <div class="card" style="display: block; overflow: hidden; width: 100%;">
+    <div class="card" style="display: block; overflow: hidden; width: 100%;" id="15">
       <div
         class="card-header text-center"
         style="min-height: 200px; width: 100%;"
@@ -960,7 +960,7 @@
   
   
   <div class="col-12 p-3" style="box-sizing: border-box;">
-    <div class="card" style="display: block; overflow: hidden; width: 100%;">
+    <div class="card" style="display: block; overflow: hidden; width: 100%;" id="28">
       <div
         class="card-header text-center"
         style="min-height: 200px; width: 100%;"
@@ -1018,7 +1018,7 @@
   
   
   <div class="col-12 p-3" style="box-sizing: border-box;">
-    <div class="card" style="display: block; overflow: hidden; width: 100%;">
+    <div class="card" style="display: block; overflow: hidden; width: 100%;" id="30">
       <div
         class="card-header text-center"
         style="min-height: 200px; width: 100%;"
