--- a/day_5.html
+++ b/day_5.html
@@ -338,7 +338,7 @@
   
   
   <div class="col-12 p-3" style="box-sizing: border-box;">
-    <div class="card" style="display: block; overflow: hidden; width: 100%;">
+    <div class="card" style="display: block; overflow: hidden; width: 100%;" id="87">
       <div
         class="card-header text-center"
         style="min-height: 200px; width: 100%;"
@@ -396,7 +396,7 @@
   
   
   <div class="col-12 p-3" style="box-sizing: border-box;">
-    <div class="card" style="display: block; overflow: hidden; width: 100%;">
+    <div class="card" style="display: block; overflow: hidden; width: 100%;" id="96">
       <div
         class="card-header text-center"
         style="min-height: 200px; width: 100%;"
@@ -455,7 +455,7 @@ During a first plenary, participants vote on their preferred topics, then join a
   
   
   <div class="col-12 p-3" style="box-sizing: border-box;">
-    <div class="card" style="display: block; overflow: hidden; width: 100%;">
+    <div class="card" style="display: block; overflow: hidden; width: 100%;" id="97">
       <div
         class="card-header text-center"
         style="min-height: 200px; width: 100%;"
