--- a/day_1.html
+++ b/day_1.html
@@ -271,7 +271,7 @@
   
   
   <div class="col-12 p-3" style="box-sizing: border-box;">
-    <div class="card" style="display: block; overflow: hidden; width: 100%;">
+    <div class="card" style="display: block; overflow: hidden; width: 100%;" id="2">
       <div
         class="card-header text-center"
         style="min-height: 200px; width: 100%;"
@@ -329,7 +329,7 @@
   
   
   <div class="col-12 p-3" style="box-sizing: border-box;">
-    <div class="card" style="display: block; overflow: hidden; width: 100%;">
+    <div class="card" style="display: block; overflow: hidden; width: 100%;" id="7">
       <div
         class="card-header text-center"
         style="min-height: 200px; width: 100%;"
@@ -387,7 +387,7 @@
   
   
   <div class="col-12 p-3" style="box-sizing: border-box;">
-    <div class="card" style="display: block; overflow: hidden; width: 100%;">
+    <div class="card" style="display: block; overflow: hidden; width: 100%;" id="12">
       <div
         class="card-header text-center"
         style="min-height: 200px; width: 100%;"
@@ -461,7 +461,7 @@
   
   
   <div class="col-12 p-3" style="box-sizing: border-box;">
-    <div class="card" style="display: block; overflow: hidden; width: 100%;">
+    <div class="card" style="display: block; overflow: hidden; width: 100%;" id="11">
       <div
         class="card-header text-center"
         style="min-height: 200px; width: 100%;"
