--- a/day_6.html
+++ b/day_6.html
@@ -260,7 +260,7 @@
   
   
   <div class="col-12 p-3" style="box-sizing: border-box;">
-    <div class="card" style="display: block; overflow: hidden; width: 100%;">
+    <div class="card" style="display: block; overflow: hidden; width: 100%;" id="103">
       <div
         class="card-header text-center"
         style="min-height: 200px; width: 100%;"
@@ -326,7 +326,7 @@
   
   
   <div class="col-12 p-3" style="box-sizing: border-box;">
-    <div class="card" style="display: block; overflow: hidden; width: 100%;">
+    <div class="card" style="display: block; overflow: hidden; width: 100%;" id="102">
       <div
         class="card-header text-center"
         style="min-height: 200px; width: 100%;"
