--- a/industry.html
+++ b/industry.html
@@ -165,7 +165,7 @@
   </div>
 </div>
 
-<div class="container">
+<div class="content">
   <!-- Nav tabs -->
   <ul class="nav nav-tabs" id="sponsorTabs" role="tablist">
     <li class="nav-item">
