--- a/jobs.html
+++ b/jobs.html
@@ -158,7 +158,7 @@
     <div class="content">
         
 
-<div class="container">
+<div class="content">
     <div class="row">
         <div class="border-top my-3"></div>
 <div class="row p-4" id="faq">
