deploy: 3c8e7d7ee5d316777ed29a06662db6dcc350c95b

--- a/day_4.html
+++ b/day_4.html
@@ -261,7 +261,7 @@
             <div class="m-3 text-muted">
               <h3>
                 <a href="" class="main-title">
-                  Keynote III
+                  Status Report: AI Music in Q1 of the 21st Century
                 </a>
               </h3>
             </div>
@@ -309,7 +309,7 @@
 
 
             <div class="m-3">
-              
+              <p>I finished my PhD in 2000; a lot has happened over the ensuing ~25 years in the field of music and computation. It seems like an appropriate moment to look back at where we were, how far we’ve come, and where we’re going next.  I will discuss early experiments in RNN-generated music, the open-source Magenta project, the rise of LLM and diffusion models for music generation, and more recent work we’ve done at Google DeepMind in text, image, video and music generation. I’ll also address the question of how AI might help us better understand music and maybe even give rise to new forms of musical expression.</p>
             </div>
             <div class="ml-3 mr-3 mt-4 mb-3 h5">
               Bio
