deploy: b9b0e709776bb37aa92379b0c591c89d31c331e6

--- a/industry.html
+++ b/industry.html
@@ -253,7 +253,7 @@
         <div class="col-md-4 mb-4">
           <div class="sponsor-card d-flex flex-column align-items-center">
             <a href="/industry_7.html"> <h3>Google</h3> 
-            <img src="/static/images/sponsors/google.png" alt="Google" class="img-fluid" style="max-width: 200px;">      
+            <img src="/static/images/" alt="Google" class="img-fluid" style="max-width: 200px;">      
             </a>
           </div>
         </div>
