deploy: 4a94008da74e68b37839deb123a59cdc365db199

--- a/day_3.html
+++ b/day_3.html
@@ -378,7 +378,7 @@
               Poster Session - 3
             </h3>
             <div class="m-3 text-left card-subtitle text-muted">
-              <p>Rachel Bittner</p>
+              <p>Nicholas Bryan</p>
             </div>
             <div class="m-3 text-left card-subtitle">
               2024-11-12 | 09:45 (America/Los_Angeles)
