--- a/day_4.html
+++ b/day_4.html
@@ -374,7 +374,7 @@
               Poster Session - 5
             </h3>
             <div class="m-3 text-left card-subtitle text-muted">
-              <p>Nicholas Bryan</p>
+              <p>Rachel Bittner</p>
             </div>
             <div class="m-3 text-left card-subtitle">
               2024-11-13 | 09:45 (America/Los_Angeles)
