deploy: 7694578d4338be56bf6d1a32e8dd33357dae75f2

--- a/day_3.html
+++ b/day_3.html
@@ -261,7 +261,7 @@
             <div class="m-3 text-muted">
               <h3>
                 <a href="" class="main-title">
-                  Keynote II
+                  Navigating the Intersection of AI and Music: Innovation, Ethics, and the Future of the Industry
                 </a>
               </h3>
             </div>
@@ -309,7 +309,7 @@
 
 
             <div class="m-3">
-              
+              <p>This speech explores the complex relationship between artificial intelligence and the music industry, tracing the evolution from early digital disruptions like Napster to today's AI-driven landscape. It examines how streaming platforms revolutionized music consumption and distribution, while also introducing new challenges such as streaming fraud. The speech delves into AI's multifaceted impact on music creation, production, and personalization, highlighting both its transformative potential and ethical concerns. The presentation also addresses controversial uses of voice AI technology and the legal and ethical considerations surrounding AI training data, including a fair use arguments and budding internal laws. Finally, we address proposed solutions, including the use of transparent attribution systems modeled after YouTube’s Content ID and policies for opt-in/out rights management. This keynote calls for a balanced approach, urging collaboration between artists, technologists, and policymakers to ensure that AI’s integration into music creation and distribution respects artistic integrity and promotes innovation.</p>
             </div>
             <div class="ml-3 mr-3 mt-4 mb-3 h5">
               Bio
@@ -777,7 +777,7 @@ Session II: 6 AM PT, 12th November, Online - ISMIR 2024</p>
   
   
   <div class="col-12 p-3" style="box-sizing: border-box;">
-    <div class="card" style="display: block; overflow: hidden; width: 100%;" id="22">
+    <div class="card" style="display: block; overflow: hidden; width: 100%;" id="104">
       <div
         class="card-header text-center"
         style="min-height: 200px; width: 100%;"
