deploy: 1e9be943eedc2642cef7ca1be189167c80699d7a

--- a/day_4.html
+++ b/day_4.html
@@ -891,13 +891,13 @@ We’re excited to welcome our very special guests:</p>
 
             <div class="mt-3 ml-3 mr-3 mb-4 text-left card-subtitle">
               <p>Music information technology has the potential to transform creative and artistic practice. Many technologists working in music information retrieval also at least are music lovers (if not skilled players), and as such have strong commitment to having their tools and technologies being useful in practice. At the same time, are these technologists indeed sufficiently aligning to musical and creative practice? Are the needs and interests of relevant real-life music stakeholders (players, composers, producers, other types of practitioners) who never heard about ‘music information retrieval’ sufficiently identified and recognized in technological research and development?</p>
-<p>As Creative Practice chairs, considering ISMIR 2024’s special focus on ‘Bridging Technology and Musical Creativity’, we want to stimulate more awareness of (and joint learning on) these questions. In order to do this, we wish to facilitate dialogues and collaborations on this topic between technologists and creatives. While <a href="https://docs.google.com/document/d/1p5yGNEVgW_W0lKgyIRWip0sgD_kOU1ki5iEkkvv6PhA/edit?tab=t.0">several community members contributed ideas</a> on which you can respond to collaborate, at ISMIR 2024, we also will host two panels featuring invited guests who all are active on the bridges between technology and creative practice.</p>
+<p>As Creative Practice chairs, considering ISMIR 2024’s special focus on ‘Bridging Technology and Musical Creativity’, we want to stimulate more awareness of (and joint learning on) these questions. In order to do this, we wish to facilitate dialogues and collaborations on this topic between technologists and creatives. While several community members contributed ideas on which you can respond to collaborate, at ISMIR 2024, we also will host two panels featuring invited guests who all are active on the bridges between technology and creative practice.</p>
 <p>In today’s panel, we will host and have a conversation with:</p>
 <ul>
-<li><strong>Eyal Amir</strong> - musician, software developer and musical instruments creator. Co-founder and CTO of the audio plugins company Modalics.  </li>
-<li><strong>Ben Cantil</strong> aka Encanti - electronic music producer, software designer, educator, and scholar  </li>
-<li><strong>Seth Forsgren</strong> - Amateur Musician, CEO at Riffusion  </li>
-<li><strong>Spencer Salazar</strong> - </li>
+<li>Eyal Amir - musician, software developer and musical instruments creator. Co-founder and CTO of the audio plugins company Modalics.</li>
+<li>Ben Cantil aka Encanti - electronic music producer, software designer, educator, and scholar</li>
+<li>Seth Forsgren - Amateur Musician, CEO at Riffusion</li>
+<li>Spencer Salazar - Principal Engineer (formerly CTO) at Output</li>
 </ul>
             </div>
 
