deploy: 8807da7195fe29af82ee98c5051e3b92464fb17c

--- a/day_3.html
+++ b/day_3.html
@@ -855,12 +855,12 @@ Session II: 6 AM PT, 12th November, Online - ISMIR 2024</p>
 
             <div class="mt-3 ml-3 mr-3 mb-4 text-left card-subtitle">
               <p>Music information technology has the potential to transform creative and artistic practice. Many technologists working in music information retrieval also at least are music lovers (if not skilled players), and as such have strong commitment to having their tools and technologies being useful in practice. At the same time, are these technologists indeed sufficiently aligning to musical and creative practice? Are the needs and interests of relevant real-life music stakeholders (players, composers, producers, other types of practitioners) who never heard about ‘music information retrieval’ sufficiently identified and recognized in technological research and development?</p>
-<p>As Creative Practice chairs, considering ISMIR 2024’s special focus on ‘Bridging Technology and Musical Creativity’, we want to stimulate more awareness of (and joint learning on) these questions. In order to do this, we wish to facilitate dialogues and collaborations on this topic between technologists and creatives. While several community members contributed ideas on which you can respond to collaborate, at ISMIR 2024, we also will host two panels featuring invited guests who all are active on the bridges between technology and creative practice.</p>
+<p>As Creative Practice chairs, considering ISMIR 2024’s special focus on ‘Bridging Technology and Musical Creativity’, we want to stimulate more awareness of (and joint learning on) these questions. In order to do this, we wish to facilitate dialogues and collaborations on this topic between technologists and creatives. While <a href="https://docs.google.com/document/d/1p5yGNEVgW_W0lKgyIRWip0sgD_kOU1ki5iEkkvv6PhA/edit?tab=t.0">several community members contributed ideas</a> on which you can respond to collaborate (<a href="https://docs.google.com/document/d/1p5yGNEVgW_W0lKgyIRWip0sgD_kOU1ki5iEkkvv6PhA/">https://docs.google.com/document/d/1p5yGNEVgW_W0lKgyIRWip0sgD_kOU1ki5iEkkvv6PhA/</a>), at ISMIR 2024, we also will host two panels featuring invited guests who all are active on the bridges between technology and creative practice.</p>
 <p>In today’s panel, we will host and have a conversation with:</p>
 <ul>
-<li>Mark Goldstein - Percussionist, programmer, teacher, inventor; with an interest in the nexus of musical gesture, sound, and expression.</li>
-<li>Michelle Alexander -  Musician, Music Analyst &amp; Mood Specialist at Pandora</li>
-<li>Carlos Mosquera - Musician, Programmer, CEO at CM MEDIA LLC</li>
+<li><strong>Mark Goldstein</strong> - Percussionist, programmer, teacher, inventor; with an interest in the nexus of musical gesture, sound, and expression.  </li>
+<li><strong>Michelle Alexander</strong> -  Musician, Music Analyst &amp; Mood Specialist at Pandora  </li>
+<li><strong>Carlos Mosquera</strong> - Musician, Programmer, CEO at CM MEDIA LLC</li>
 </ul>
             </div>
 
@@ -901,10 +901,11 @@ Session II: 6 AM PT, 12th November, Online - ISMIR 2024</p>
             </div>
 
             <div class="mt-3 ml-3 mr-3 mb-4 text-left card-subtitle">
-              <p>Thank you to Riffusion for hosting this event!</p>
+              <p><em>Thank you to Riffusion for hosting this event!</em></p>
 <p>Join us for an evening of music, drinks, and creative dialogue at the ISMIR Creative Practice x Riffusion SOCIAL on Tuesday, November 12th! Hosted at the Riffusion HQ and the audiophile lounge, Phonobar, this evening promises a great lineup of live performances and conversations bridging technology and musical creativity.</p>
-<p>Riffusion is a small team of musicians, engineers, and researchers building creative AI tools in San Francisco. We train foundation models for music generation, and envision Riffusion as a new musical instrument.  </p>
-<p><img alt="Riffusion" src="/static/images/sponsors/riffusion.png" title="Riffusion" /></p>
+<p><strong>RSVP here</strong>: <a href="https://partiful.com/e/9HjldDxJTtSHXk2B5Mxc">https://partiful.com/e/9HjldDxJTtSHXk2B5Mxc</a>? . We have a few more spots than what capacity states now, but it will be important for people to bring their ISMIR badge.</p>
+<p>Riffusion is a small team of musicians, engineers, and researchers building creative AI tools in San Francisco. We train foundation models for music generation, and envision Riffusion as a new musical instrument. <br/> <br/>
+<img alt="Riffusion" src="/static/images/sponsors/riffusion.png" title="Riffusion" /></p>
             </div>
 
           
